# modular-bitfield

./: Cargo.toml  playground.rs
benches/: benchmarks.rs  cmp_bitfield_crate.rs  handwritten.rs
impl/: Cargo.toml
impl/src/: bitfield_specifier.rs  define_specifiers.rs  lib.rs
impl/src/bitfield/: analyse.rs  expand.rs  params.rs
src/: lib.rs
tests/: 01-specifier-types.rs  02-storage.rs  03-accessors.rs  04-multiple-of-8bits.rs  04-multiple-of-8bits.stderr  05-accessor-signatures.rs  10-bits-attribute.rs  11-bits-attribute-wrong.rs  12-accessors-edge.rs  13-tuple-structs.rs  14-checked-setters.rs  15-manual-reset.rs  16-u128-specifier.rs  17-byte-conversions.rs  18-within-single-byte.rs  19-get-spanning-data.rs  20-access-test.rs  21-raw-identifiers.rs  22-with-setter.rs  24-primitives-as-specifiers.rs  26-invalid-struct-specifier.rs  27-invalid-union-specifier.rs  28-single-bit-enum.rs  panic_tests.rs
tests/bits-param/: bits-non-filled-1.rs  bits-non-filled-2.rs  complex-use-case.rs  conflicting-params.rs  conflicting-repr.rs  duplicate-param-1.rs  duplicate-param-2.rs  invalid-param-value-1.rs  invalid-param-value-2.rs  low-bits-filled.rs  missing-param-value.rs  too-few-bits.rs  too-few-bits.stderr  too-many-bits.rs  too-many-bits.stderr  valid-use-1.rs  valid-use-2.rs  valid-use-3.rs  valid-use-4.rs
tests/bytes-param/: duplicate-parameters.rs  fewer-bytes-than-expected.rs  fewer-bytes-than-expected.stderr  invalid-int-value.rs  invalid-type.rs  more-bytes-than-expected.rs  more-bytes-than-expected.stderr  valid-bitfield.rs  valid-specifier-bitfield.rs
tests/derive-bitfield-specifier/: 06-enums.rs  07-optional-discriminant.rs  08-non-power-of-two.rs  09-variant-out-of-range.rs  09-variant-out-of-range.stderr
tests/derive-debug/: duplicate-derive-debug-2.rs  duplicate-derive-debug.rs  print-invalid-bits.rs  respects-other-derives.rs  valid-use-2.rs  valid-use-specifier.rs  valid-use.rs
tests/derive-specifier/: duplicate-derive-1.rs  duplicate-derive-2.rs  out-of-bounds.rs  out-of-bounds.stderr  (+3 more)
(+58 files in other folders)
