[package]
name = "scryer-modular-bitfield-impl"
version = "0.11.2"
edition = "2018"
authors = ["Mark Thom <markjordanthom@gmail.com>", "Robin Freyler <robinfreyler@web.de>"]
license = "MIT/Apache-2.0"
readme = "../README.md"

repository = "https://github.com/mthom/modular-bitfield"
documentation = "https://docs.rs/modular-bitfield"
description = "Bitfields for structs that allow for modular use of enums."
categories = ["data-structures"]
keywords   = ["bitfield", "bit", "bitfields"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
scryer-modular-bitfield = { path = "..", version = "0.11.3" }
